--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,8 @@ version: '3'
 services:
   database:
     image: postgres:12-alpine
+    ports:
+      - '5432:5432'
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: to_do
