--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/ormconfig.json",
-    "typeorm:create": "typeorm migration:create -n ToDoMigration",
-    "typeorm:generate": "typeorm migration:generate -n",
-    "typeorm:migrate": "typeorm migration:run",
-    "typeorm:revert": "typeorm migration:revert"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:generate": "npm run typeorm migration:generate -- -n",
+    "typeorm:migrate": "npm run typeorm migration:run",
+    "typeorm:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
